# dynamic-length-coded-lzw

./: CMakeLists.txt  README.md
src/: entropy.cpp  main.cpp
src/backtracer/: error.cpp
src/include/: any_length_numeric.h  args.h  colors.h  cppcrc.h  error.h  execute.h  logger.h  lzw.h  lzw.inl  lzw6.h  mmap.h  numeric.h  numeric.inl  utils.h
src/lzw/: mmap.cpp
src/misc/: args.cpp  color.cpp  execute.cpp  logger.cpp  utils.cpp
src/tests/: lzw.cpp  numeric.cpp
